--- a/templates/events.html
+++ b/templates/events.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Screen IT</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -49,9 +49,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="{{ url_for('applicants') }}">Applicants</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="{{ url_for('events') }}">Events</a>
             </li>
@@ -77,21 +77,24 @@
 
 
 
+<div class="container-fluid">    
+ 
+
       <form class="form-horizontal" action="{{ url_for('handle_data') }}" method="POST">
   <div class="form-group">
     <label class="control-label col-sm-2" >Event Name:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="eventname" name="eventname" placeholder="Enter eventname">
+      <input type="text" class="form-control" id="eventname" name="eventname" placeholder="Enter event name">
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2">Interest:</label>
     <div class="col-sm-10"> 
-      <input type="text" class="form-control" id="interests" name="interests" placeholder="Enter Likely Fields">
+      <input type="text" class="form-control" id="interests" name="interests" placeholder="Select from these: frontend, backend, ai, development, coding, frameworks">
     </div>
   </div>
     <div class="form-group">
-    <label class="control-label col-sm-2">Number of candidates to select:</label>
+    <label class="control-label col-sm-4">Number of candidates to select:</label>
     <div class="col-sm-10"> 
       <input type="text" class="form-control" id="noofcandidates" name="noofcandidates" placeholder="No of candidates to select">
     </div>
@@ -105,7 +108,7 @@
   <!-- Footer -->
 
 
-
+</div>  
   </body>
 
 </html>
